--- a/Proconsulta/wwwroot/css/site.css
+++ b/Proconsulta/wwwroot/css/site.css
@@ -80,3 +80,25 @@ body {
 .topbar div ,.topbar div span{
     color:white;
 }
+
+.wrapper {
+    display: flex;
+    width: 100%;
+}
+
+#sidebar {
+    width: 250px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    z-index: 999;
+    background: #7386D5;
+    color: #fff;
+    transition: all 0.3s;
+    padding:20px;
+}
+
+#sidebar li ul {
+    padding-left:10px;
+}
